package gui;

public class MacOSFactory implements GUIFactory {
    public Button createButton(){
        return new MacOSButton();
    }
    public Checkbox createCheckbox(){
        return new MacOSCheckbox();
    }
}
