package gui;

public class WindowsButton implements Button {
    public void paint(){
        System.out.println("Rendering Windows button");
    }
}
