package gui;

public interface Checkbox {
    void paint();
}
