package gui;

public interface GUIFactory {
    Button createButton();
    Checkbox createCheckbox();
}
