package gui;

public class MacOSButton implements Button {
    public void paint(){
        System.out.println("Rendering MacOS button");
    }
}
