package gui;

public class MacOSCheckbox  implements Checkbox {
    public void paint(){
        System.out.println("Rendering MacOS checkbox");
    }
}
