package gui;

public class WindowsCheckbox implements Checkbox {
    public void paint(){
        System.out.println("Rendering Windows checkbox");
    }
}
